--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
+    "editor.renderWhitespace": "boundary",
     "json.schemaDownload.enable": true,
     "python.analysis.autoSearchPaths": false,
     "python.analysis.extraPaths": [],
     "python.autoComplete.extraPaths": [],
     "python.defaultInterpreterPath": ".venv",
-    "python.terminal.activateEnvironment": false
+    "python.terminal.activateEnvironment": true
 }
